testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport3.errors.txt
usage.js(1,11): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport3.js");
              ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    const y = x["my-fake-sym"];
    const z = x[x.S];
    
==== lateBoundAssignmentDeclarationSupport3.js (0 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    Object.defineProperty(module.exports, _sym, { value: "ok" });
    Object.defineProperty(module.exports, _str, { value: "ok" });
    module.exports.S = _sym;